# nlcpd

./: .gitignore  README.md  pyproject.toml
crawler/: README.md  categories.csv  pyproject.toml  scrapy.cfg
crawler/nlccrawler/: items.py  middlewares.py  pipelines.py  settings.py
crawler/nlccrawler/spiders/: book.py  category.py
downloader/: getbook.py  pyproject.toml
oldata/: 雲南省圖書館古籍.csv
olddownloader/: config.py  getbook.py
olduploader/: config.sample.yml  find-existing.py  position1  pyproject.toml  worker.py
olduploader/data/: convertyml.py  getbook.py  test.yml  雲南圖書館古籍.json  雲南圖書館古籍.py  雲南圖書館古籍.yml
uploader/: .gitignore  addnavibar.py  bootstrap_venv.sh  config.sample.yml  delete.py  find-existing.py  fix.py  gentable.py  genwikitable.py  getbook.py  login.py  pyproject.toml  upload.py  user-config.py  worker.py  yeslicense.py
uploader/data/: README.txt  check-missing-by-file-path.py  dupvol.py  fixnewspapers.py  namecapfix.yml  split.py  中華醫藥典籍.json  各地民族文字古籍特藏.json  地方志-PD2022.json  地方志-pd2022.py  地方志.json  地方館藏特色資源.json  天津圖書館古籍.5.json  宋人文集.json  數字古籍.16.json  數字古籍.update.json  數字方志.10.json  日本永青文庫捐贈漢籍.json  民國圖書-PD2022.6.json  民國圖書-pd2022.py  民國圖書.11.json  民國圖書.fixed-missings.json  民國圖書.fixedmissing.json  民國文獻-PD2022.4.json  民國文獻-pd2022.py  民族文字古籍特藏庫.json  珍秘公天下.json  趙城金藏.json  雲南圖書館古籍.py  雲南圖書館古籍.yml
uploader/data/original/: 中華醫藥典籍.json  各地民族文字古籍特藏.json  地方志.json  地方館藏特色資源.json  天津圖書館古籍.json.zst  宋人文集.json  數字古籍.update.json  民族文字古籍特藏庫.json  珍秘公天下.json
