[tool.poetry]
name = "uploader"
version = "0.1.0"
description = ""
authors = ["Hung-I Wang <whygowe@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mwclient = "^0.10.1"
zhconv-rs = "^0.3.0"
PyYAML = "^6.0"
requests = "^2.28.1"
more-itertools = "^9.0.0"
internetarchive = "^3.3.0"
mwclient-contenttranslation = "^0.1.0"
pywikibot = "^8.3.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pyink = "^23.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
